--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: go
 go:
 - 1.8
 install:
-- go get -u github.com/Sirupsen/logrus
+- go get -u github.com/cenkalti/backoff
+- go get -u github.com/hashicorp/errwrap
+- go get -u github.com/hashicorp/go-multierror
 - go get -u gopkg.in/matm/v1/gocov-html
 - go get -u github.com/cee-dub/go-junit-report
 - go get -u github.com/stretchr/testify
